--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -829,7 +829,200 @@
         </div>
     </details>
 </section>
+<!-- DÖRDÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı (Devamı) -->
+<section aria-labelledby="bolum-dusunce-anlatim-devami">
+    <h3 id="bolum-dusunce-anlatim-devami" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        DÖRDÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı (Devamı)
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölüm, bireyin düşünce, inanç ve hareket özgürlüğünü kapsar. Yerleşme, seyahat, din, düşünce ve bilim özgürlüğü gibi haklar, devletin müdahale edebilmesi için farklı usul ve sebeplere tabidir. Sınavda en çok <strong>sınırlama sebepleri</strong> ve <strong>karşılaştırmalı analizler</strong> sorulur.
+    </p>
 
+    <!-- Madde 23 -->
+    <details id="madde-23" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 23 – Yerleşme ve Seyahat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>yerleşme ve seyahat hürriyetine</strong> sahiptir. Bu hürriyet, yalnızca <strong>kanunla</strong> ve <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu sağlığı</strong>, <strong>genel ahlak</strong> veya <strong>başkalarının hakları</strong> gibi sebeplerle sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Vatandaş, <strong>ülkeden çıkamaz</strong> veya <strong>ülkeye alınamaz</strong> ancak <strong>hâkim kararı</strong> veya <strong>meşru müdafaa</strong> hali ile sınırlanabilir.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebeplerindeki Farklılıklar</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki en önemli çeldirici, yerleşme ve seyahat hürriyetlerinin sınırlanma sebeplerini karıştırmaktır. İkisinin sebepleri farklıdır:</p>
+                <div class="grid md:grid-cols-2 gap-4 text-sm">
+                    <div class="bg-blue-50 p-4 rounded-md border-l-4 border-blue-400">
+                        <h6 class="font-bold text-blue-800 mb-2">📍 Yerleşme Hürriyeti Sınırlanabilir:</h6>
+                        <ul class="list-disc pl-5 space-y-1">
+                            <li>Suç işlemeyi önlemek</li>
+                            <li>Sosyal ve ekonomik gelişmeyi sağlamak</li>
+                            <li>Sağlıklı ve düzenli kentleşme</li>
+                            <li>Kamu mallarını korumak</li>
+                        </ul>
+                    </div>
+                    <div class="bg-amber-50 p-4 rounded-md border-l-4 border-amber-400">
+                        <h6 class="font-bold text-amber-800 mb-2">✈️ Seyahat Hürriyeti Sınırlanabilir:</h6>
+                        <ul class="list-disc pl-5 space-y-1">
+                            <li>Suç soruşturması ve kovuşturması</li>
+                            <li>Suç işlemeyi önlemek</li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="text-sm mt-3" style="text-align: justify;"><strong>📌 Özel Not:</strong> Vatandaşın yurt dışına çıkışının engellenmesi ise daha özel bir şarta, mutlaka <strong>HÂKİM KARARINA</strong> bağlanmıştır.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 24 -->
+    <details id="madde-24" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 24 – Din ve Vicdan Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>din ve vicdan hürriyetine</strong> sahiptir. Kimse, dinini veya vicdanını açıklamaya zorlanamaz ve bunlardan dolayı suçlanamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Din ve vicdan hürriyeti, herkesin dinî inanç, kanaat, kılış ve ibadetlerini yerine getirme, öğretme, öğrenme, açıklama ve yayma hürriyetini de kapsar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Devlet, din işlerini yönetemez ve din ile devlet işlerini birbirine karıştıramaz. Devletin dini yoktur.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, inanç dünyasının tamamen serbest olduğunu güvence altına alır. Kimse inancını açıklamaya zorlanamaz. Sınav için dikkat edilmesi gereken nokta, <strong>"Din Kültürü ve Ahlak Bilgisi"</strong> dersinin okullarda zorunlu olduğudur. Bunun dışındaki özel din eğitimi ise tamamen kişilere bırakılmıştır.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 25 -->
+    <details id="madde-25" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 25 – Düşünce ve Kanaat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>düşünce ve kanaat hürriyetine</strong> sahiptir. Kimse, düşünce ve kanaatleri nedeniyle kınanamaz veya suçlanamaz.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu hak, kişinin <strong>"iç dünyası"</strong> ile ilgilidir. Sadece düşünmek ve bir kanaate sahip olmak eylemini korur. Dışa vurulmadığı sürece düşüncenin bir sınırı yoktur. Bu nedenle Anayasa'daki <strong>mutlak ve sınırsız</strong> olan ender haklardan biridir. Sınavda bu maddenin <strong>"sınırlanamaz"</strong> olduğunu vurgulayan sorular gelir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 26 -->
+    <details id="madde-26" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 26 – Düşünceyi Açıklama ve Yayma Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>düşüncelerini açıklama ve yayma hürriyetine</strong> sahiptir. Bu hürriyet, yalnızca <strong>kanunla</strong> ve <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu güvenliği</strong>, <strong>suçların önlenmesi</strong>, <strong>yargılamanın gizliliği</strong>, <strong>başkalarının şöhret ve hakları</strong>, <strong>özel ve aile hayatı</strong>, <strong>meslek sırları</strong>, <strong>devlet sırları</strong> ve <strong>devletin temel nitelikleri</strong> gibi sebeplerle sınırlanabilir.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebepleri Şifre Çözücü</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu uzun listeyi ezberlemek yerine, 3 ana başlık altında gruplayarak aklınızda tutabilirsiniz:</p>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>Devletin ve Toplumun Korunması:</strong>
+                        <ul class="list-disc pl-5 mt-1 space-y-1">
+                            <li>Millî güvenlik, Kamu düzeni, Kamu güvenliği</li>
+                            <li>Cumhuriyetin temel nitelikleri</li>
+                            <li>Devletin bölünmez bütünlüğü</li>
+                        </ul>
+                    </li>
+                    <li><strong>Adaletin Korunması:</strong>
+                        <ul class="list-disc pl-5 mt-1 space-y-1">
+                            <li>Suçların önlenmesi ve suçluların cezalandırılması</li>
+                            <li>Yargılama görevinin korunması</li>
+                        </ul>
+                    </li>
+                    <li><strong>Bireylerin ve Sırların Korunması:</strong>
+                        <ul class="list-disc pl-5 mt-1 space-y-1">
+                            <li>Başkalarının şöhret ve hakları, özel ve aile hayatı</li>
+                            <li>Meslek sırları ve Devlet sırları</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </details>
+
+    <!-- Karşılaştırmalı Analiz: Madde 25 vs 26 -->
+    <div class="my-8 p-6 bg-indigo-50 border-l-4 border-indigo-400 rounded-lg highlight-box" role="region">
+        <h4 class="font-bold text-indigo-800 text-xl mb-4 flex items-center">
+            <span class="mr-3 text-2xl">⚠️</span> Karşılaştırmalı Analiz: Düşünce ve İfade Özgürlüğü
+        </h4>
+        <p class="text-indigo-900 mb-4" style="text-align: justify;">
+            Sınavlarda en çok karıştırılan iki madde olan <strong>Madde 25</strong> ve <strong>Madde 26</strong>'yı birlikte incelemek en doğrusudur. Aralarındaki temel fark, birinin <strong>MUTLAK</strong> ve <strong>SINIRSIZ</strong>, diğerinin ise <strong>SINIRLI</strong> olmasıdır.
+        </p>
+        <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                <thead>
+                    <tr class="bg-indigo-100">
+                        <th class="border border-indigo-200 px-4 py-2 text-left font-semibold text-indigo-800">Kriter</th>
+                        <th class="border border-indigo-200 px-4 py-2 text-left font-semibold text-indigo-800">Madde 25 – Düşünce Hürriyeti</th>
+                        <th class="border border-indigo-200 px-4 py-2 text-left font-semibold text-indigo-800">Madde 26 – Düşünceyi Açıklama Hürriyeti</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="bg-white">
+                        <td class="border border-indigo-200 px-4 py-2 font-medium">Neyi Korur?</td>
+                        <td class="border border-indigo-200 px-4 py-2">İç dünyayı (düşünmek, inanmak)</td>
+                        <td class="border border-indigo-200 px-4 py-2">Dışa vurmayı (konuşmak, yazmak, yaymak)</td>
+                    </tr>
+                    <tr class="bg-indigo-50">
+                        <td class="border border-indigo-200 px-4 py-2 font-medium">Sınırlanabilir mi?</td>
+                        <td class="border border-indigo-200 px-4 py-2 text-green-700 font-bold">Hayır (Mutlak Hak)</td>
+                        <td class="border border-indigo-200 px-4 py-2 text-red-700 font-bold">Evet (Kanunla Sınırlanabilir)</td>
+                    </tr>
+                    <tr class="bg-white">
+                        <td class="border border-indigo-200 px-4 py-2 font-medium">Sınavda Nasıl Sorulur?</td>
+                        <td class="border border-indigo-200 px-4 py-2">"Aşağıdakilerden hangisi düşünce hürriyetini sınırlayamaz?"</td>
+                        <td class="border border-indigo-200 px-4 py-2">"Aşağıdakilerden hangisi düşünceyi açıklama hürriyetini sınırlayabilir?"</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- Madde 27 -->
+    <details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 27 – Bilim ve Sanat Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>bilim ve sanatla uğraşma, öğrenebilme, öğretebilme, açıklama ve yayma hürriyetine</strong> sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu hürriyet, yalnızca <strong>kanunla</strong> ve <strong>devletin temel nitelikleri</strong> gibi sebeplerle sınırlanabilir.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Bilim ve Sanatın "Kırmızı Çizgisi"</h6>
+                <p style="text-align: justify;" class="mb-3">Bu madde, bilim ve sanata 5 temel hürriyetten oluşan geniş bir "hak paketi" sunar, ancak bu paketteki tek bir hakka çok özel bir "kırmızı çizgi" çeker.</p>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <div class="bg-green-50 p-4 rounded-md border-l-4 border-green-400">
+                        <h6 class="font-bold text-green-800 mb-2">✅ Hak Paketi (Serbest Olanlar):</h6>
+                        <ul class="list-disc pl-5 text-sm space-y-1">
+                            <li>Öğrenme Hakkı</li>
+                            <li>Öğretme Hakkı</li>
+                            <li>Açıklama Hakkı</li>
+                            <li>Yayma Hakkı</li>
+                            <li>Araştırma Hakkı</li>
+                        </ul>
+                    </div>
+                    <div class="bg-red-50 p-4 rounded-md border-l-4 border-red-400">
+                        <h6 class="font-bold text-red-800 mb-2">⛔ Tek Kırmızı Çizgi (Sınırlı Olan):</h6>
+                        <p class="text-sm">Yukarıdaki pakette yer alan <strong>yayma hakkı</strong>, devletin temelini oluşturan Anayasa'nın değiştirilemez ilk üç maddesine (Cumhuriyet, nitelikleri, bütünlüğü) saldırmak amacıyla kullanılamaz.</p>
+                    </div>
+                </div>
+                <p class="text-sm mt-3" style="text-align: justify;"><strong>📌 Analoji:</strong> Bu, sanatçıya <em>"İstediğin heykeli yapabilirsin ama o heykeli Cumhuriyet'i yıkma çağrısı yapmak için şehrin meydanına dikemezsin"</em> demek gibidir.</p>
+            </div>
+        </div>
+    </details>
+</section>
                 
 
                 
