--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1024,7 +1024,118 @@
     </details>
 </section>
                 
+<!-- BEŞİNCİ BÖLÜM: Siyasi Haklar ve Ödevler -->
+<section aria-labelledby="bolum-siyasi-haklar">
+    <h3 id="bolum-siyasi-haklar" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        BEŞİNCİ BÖLÜM: Siyasi Haklar ve Ödevler
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölüm, toplumda düşünce, bilgi ve haberleşme özgürlüğünün temelini oluşturan hakları kapsar. Basın hürriyeti, yayın hakkı, düzeltme hakkı gibi kavramlar, demokratik bir toplumun vazgeçilmezi olarak değerlendirilir. Sınavda en çok <strong>usul kuralları</strong>, <strong>istisnalar</strong> ve <strong>yasaklar</strong> sorulur.
+    </p>
 
+    <!-- Madde 28 -->
+    <details id="madde-28" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 28 – Basın Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Basın hürriyeti, sansür veya denetim altında tutulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Yayınların toplatılması ancak hâkim kararıyla olur.</strong> Gecikmesinde sakınca bulunan hallerde, kanunla yetkilendirilmiş merciin yazılı emriyle toplatılabilir. Bu emir, <strong>en geç yirmidört saat içinde görevli hâkimin onayına sunulur</strong>. Hâkim, bu onay talebini <strong>en geç kırksekiz saat içinde karara bağlar</strong>.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Maddenin ilk cümlesi her şeyi özetler: <strong>Sansür yasağı</strong>. Sansür, bir eserin yayımlanmadan önce devlet tarafından denetlenmesi ve engellenmesidir. Anayasamız buna kesin olarak <strong>"hayır"</strong> der. Devlet ancak eser yayımlandıktan sonra bir suç unsuru varsa harekete geçebilir.</p>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yayınların Toplatılması ve "24/48 Kuralı"</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Özel hayat, konut ve haberleşmeden sonra "24/48 kuralı" burada tekrar karşımıza çıkıyor! Bir yayının toplatılması için ana kural hâkim kararıdır. Ancak gecikmesinde sakınca olan istisnai durumlarda yetkili merci (örn: savcı) yazılı emirle toplatabilir. Bu durumda emir, 24 saat içinde hâkime sunulur ve hâkim 48 saat içinde onaylamazsa toplatma kararı kalkar.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 29 -->
+    <details id="madde-29" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 29 – Süreli ve Süresiz Yayın Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, süresiz veya süreli yayın yapma hakkına sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu yayınlar, yalnızca <strong>kanunla</strong> ve <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu güvenliği</strong>, <strong>suçların önlenmesi</strong>, <strong>başkalarının şöhret ve hakları</strong>, <strong>özel ve aile hayatı</strong> gibi sebeplerle sınırlanabilir.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, dergi veya gazete çıkarmak için devletten <strong>"izin"</strong> alma zorunluluğu olmadığını, sadece <strong>"bildirimde"</strong> bulunmanın yeterli olduğunu belirtir. Bu, <strong>"izin sistemi"</strong> yerine <strong>"bildirim sistemi"</strong> ilkesidir ve basın özgürlüğünün önemli bir güvencesidir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 30 -->
+    <details id="madde-30" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 30 – Basın Araçlarının Korunması
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Basın araçları, suç işlenmesinde kullanılmak amacıyla, ancak <strong>hâkim kararıyla</strong> el konulabilir veya <strong>zorla kullanılamaz</strong>.
+            </blockquote>
+            <div class="warning-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu</h6>
+                <p style="text-align: justify;" class="text-sm">Bir suçlu, cinayet silahı olarak bir çekiç kullandı diye çekiç üreten fabrikayı kapatamazsınız. Aynı mantıkla, bir yazarın yazdığı suç teşkil eden bir yazı yüzünden, o yazıyı basan matbaa makineleri "suç aleti" sayılarak zapt edilemez. Bu madde, basın faaliyetinin fiziki olarak engellenmesinin önüne geçer.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 31 -->
+    <details id="madde-31" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 31 – Kamu Tüzel Kişilerinin Elindeki Basın Dışı Kitle Haberleşme Araçlarından Yararlanma Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kamu tüzel kişilerinin elinde bulunan radyo, televizyon ve benzeri kitle haberleşme araçlarından, <strong>herkesin adil ve eşit koşullarda yararlanma hakkı</strong> vardır.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, özellikle <strong>TRT</strong> gibi kamuya ait radyo ve televizyonlardan kişilerin ve siyasi partilerin adil bir şekilde yararlanma hakkını güvence altına alır. Amaç, kamunun malı olan yayın organlarının tek bir görüşün propaganda aracına dönüşmesini engellemektir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 32 -->
+    <details id="madde-32" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 32 – Düzeltme ve Cevap Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Bir kimseye haksız veya yanlış bir haber verilmesi veya bir kimse hakkında haksız bir bilgi yayılması halinde, mağdurun bu yayını düzeltme ve cevap verme hakkı vardır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu hakkın kullanılması, <strong>kanunla</strong> düzenlenebilir.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Düzeltme Hakkının Şifreleri</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu hakkın doğması ve kullanılması için bilinmesi gereken üç kritik nokta vardır:</p>
+                <div class="grid md:grid-cols-2 gap-4 text-sm">
+                    <div class="bg-blue-50 p-4 rounded-md border-l-4 border-blue-400">
+                        <h6 class="font-bold text-blue-800 mb-2">⚖️ Hakkın Doğduğu 2 Durum:</h6>
+                        <ul class="list-disc pl-5 space-y-1">
+                            <li><strong>Haysiyet ve şerefe dokunulması</strong></li>
+                            <li><strong>Gerçeğe aykırı yayın yapılması</strong></li>
+                        </ul>
+                    </div>
+                    <div class="bg-amber-50 p-4 rounded-md border-l-4 border-amber-400">
+                        <h6 class="font-bold text-amber-800 mb-2">⏱️ Yargısal Süreç:</h6>
+                        <p>Yayın organı tekzip metnini yayımlamazsa, hâkim en geç <strong>7 GÜN</strong> içinde kararını verir.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </details>
+</section>
                 
             </article>
         </div>
