--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -752,14 +752,13 @@
     </details>
 </section>
                 
-<!-- ÜÇÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı -->
-<section aria-labelledby="bolum-dusunce-anlatim">
-    <h3 id="bolum-dusunce-anlatim" class="subsection-title text-2xl font-bold mt-12 mb-4">
-        ÜÇÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı
+<!-- ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması (Madde 20-22) -->
+<section aria-labelledby="bolum-ozel-alan">
+    <h3 id="bolum-ozel-alan" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması
     </h3>
-    <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, bireyin özel alanını en güçlü şekilde koruyan üç temel hakkı kapsar: <strong>Özel Hayatın Gizliliği</strong>, <strong>Konut Dokunulmazlığı</strong> ve <strong>Haberleşme Hürriyeti</strong>. Bu haklar, devletin müdahale edebilmesi için en katı usul kurallarına tabidir. Sınavda en çok <strong>usul kuralları</strong> ve <strong>istisnalar</strong> sorulur.
-    </p>
+    <p style="text-align: justify;">Özel hayatın gizliliği, konut dokunulmazlığı ve haberleşme hürriyeti...</p>
+    <!-- Madde 20, 21, 22 -->
 
     <!-- Madde 20 -->
     <details id="madde-20" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -829,14 +828,13 @@
         </div>
     </details>
 </section>
-<!-- DÖRDÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı (Devamı) -->
-<section aria-labelledby="bolum-dusunce-anlatim-devami">
-    <h3 id="bolum-dusunce-anlatim-devami" class="subsection-title text-2xl font-bold mt-12 mb-4">
-        DÖRDÜNCÜ BÖLÜM: Düşünce ve Anlatım Hakkı (Devamı)
+<!-- DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti (Madde 23-27) -->
+<section aria-labelledby="bolum-dusunce-ifade">
+    <h3 id="bolum-dusunce-ifade" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti
     </h3>
-    <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, bireyin düşünce, inanç ve hareket özgürlüğünü kapsar. Yerleşme, seyahat, din, düşünce ve bilim özgürlüğü gibi haklar, devletin müdahale edebilmesi için farklı usul ve sebeplere tabidir. Sınavda en çok <strong>sınırlama sebepleri</strong> ve <strong>karşılaştırmalı analizler</strong> sorulur.
-    </p>
+    <p style="text-align: justify;">Yerleşme, seyahat, din, düşünce, bilim ve sanat...</p>
+    <!-- Madde 23, 24, 25, 26, 27 -->
 
     <!-- Madde 23 -->
     <details id="madde-23" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -1024,14 +1022,13 @@
     </details>
 </section>
                 
-<!-- BEŞİNCİ BÖLÜM: Siyasi Haklar ve Ödevler -->
-<section aria-labelledby="bolum-siyasi-haklar">
-    <h3 id="bolum-siyasi-haklar" class="subsection-title text-2xl font-bold mt-12 mb-4">
-        BEŞİNCİ BÖLÜM: Siyasi Haklar ve Ödevler
+<!-- BEŞİNCİ BÖLÜM: Basın ve Yayın Hakkı (Madde 28-32) -->
+<section aria-labelledby="bolum-basin-yayin">
+    <h3 id="bolum-basin-yayin" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        BEŞİNCİ BÖLÜM: Basın ve Yayın Hakkı
     </h3>
-    <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, toplumda düşünce, bilgi ve haberleşme özgürlüğünün temelini oluşturan hakları kapsar. Basın hürriyeti, yayın hakkı, düzeltme hakkı gibi kavramlar, demokratik bir toplumun vazgeçilmezi olarak değerlendirilir. Sınavda en çok <strong>usul kuralları</strong>, <strong>istisnalar</strong> ve <strong>yasaklar</strong> sorulur.
-    </p>
+    <p style="text-align: justify;">Basın hürriyeti, sansür yasağı, düzeltme hakkı...</p>
+    <!-- Madde 28, 29, 30, 31, 32 -->
 
     <!-- Madde 28 -->
     <details id="madde-28" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
