--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -63,13 +63,14 @@
                         BİRİNCİ KISIM: Genel Esaslar
                     </h2>
 
-                    <section aria-labelledby="bolum1-4">
-                        <h3 id="bolum1-4" class="subsection-title text-2xl font-bold mt-12 mb-4">
-                            Devletin "Çekirdek Ailesi": Değiştirilemez Hükümler
-                        </h3>
-                        <p style="text-align: justify;">
+ <section aria-labelledby="bolum1-4">
+    <h3 id="bolum1-4" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        BİRİNCİ BÖLÜM: Değiştirilemez Hükümler
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
                             Anayasa'nın bu ilk dört maddesi, devletin kimliğini ve karakterini tanımlayan temel direklerdir. Bu maddeler o kadar önemlidir ki, Anayasa'nın kendisi tarafından özel bir koruma zırhına alınmışlardır. Sınavda bu bölümden en az bir soru kesin olarak gelir.
-                        </p>
+                 </p>
+</section>
 
                         <!-- Madde 1 -->
                         <details id="madde-1" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -151,13 +152,14 @@
                         </details>
                     </section>
 
-                    <section aria-labelledby="bolum5-11">
-                        <h3 id="bolum5-11" class="subsection-title text-2xl font-bold mt-12 mb-4">
-                            Devletin İşleyiş Felsefesi ve Hukukun Üstünlüğü
-                        </h3>
-                        <p style="text-align: justify;">
-                            Devletin kimliğini öğrendikten sonra, şimdi de bu devletin hangi amaçlar doğrultusunda, hangi ilkelerle ve nasıl bir yetki dağılımıyla işleyeceğini inceleyeceğiz. Bu maddeler, devlet mekanizmasının çalışma prensiplerini ve hukukun herkes üzerindeki bağlayıcılığını ortaya koyar.
-                        </p>
+  <section aria-labelledby="bolum5-11">
+    <h3 id="bolum5-11" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        İKİNCİ BÖLÜM: Devletin İşleyiş Felsefesi ve Hukukun Üstünlüğü
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Devletin kimliğini tanıdıktan sonra, şimdi bu devletin hangi amaçlar doğrultusunda, hangi ilkelerle ve nasıl bir yetki dağılımıyla işlediğini inceleyeceğiz. Bu maddeler, devlet mekanizmasının çalışma prensiplerini ve hukukun herkes üzerindeki bağlayıcılığını ortaya koyar.
+    </p>
+</section>
 
                         <!-- Madde 5 -->
                         <details id="madde-5" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -621,7 +623,7 @@
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
     </p>
-
+</section>
 
     <!-- Madde 17 -->
     <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -757,8 +759,10 @@
     <h3 id="bolum-ozel-alan" class="subsection-title text-2xl font-bold mt-12 mb-4">
         ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması
     </h3>
-    <p style="text-align: justify;">Özel hayatın gizliliği, konut dokunulmazlığı ve haberleşme hürriyeti...</p>
-    <!-- Madde 20, 21, 22 -->
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölümde yer alan maddeler, bireyin özel hayatının, konutunun ve haberleşmesinin devlet müdahalesinden korunmasını sağlar. Bu haklara müdahale, yalnızca katı usul kurallarıyla sınırlıdır.
+    </p>
+</section>
 
     <!-- Madde 20 -->
     <details id="madde-20" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -833,8 +837,10 @@
     <h3 id="bolum-dusunce-ifade" class="subsection-title text-2xl font-bold mt-12 mb-4">
         DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti
     </h3>
-    <p style="text-align: justify;">Yerleşme, seyahat, din, düşünce, bilim ve sanat...</p>
-    <!-- Madde 23, 24, 25, 26, 27 -->
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölümde yer alan maddeler, bireyin düşüncelerini, inançlarını, dinini ve bilim-sanat faaliyetlerini özgürce geliştirme ve yayma hakkını düzenler. Bu haklar, bireyin iç dünyasını ve ifade özgürlüğünü korur.
+    </p>
+</section>
 
     <!-- Madde 23 -->
     <details id="madde-23" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -1027,8 +1033,10 @@
     <h3 id="bolum-basin-yayin" class="subsection-title text-2xl font-bold mt-12 mb-4">
         BEŞİNCİ BÖLÜM: Basın ve Yayın Hakkı
     </h3>
-    <p style="text-align: justify;">Basın hürriyeti, sansür yasağı, düzeltme hakkı...</p>
-    <!-- Madde 28, 29, 30, 31, 32 -->
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölümde yer alan maddeler, basın hürriyetini, sansür yasağını, yayın haklarını ve düzeltme hakkını düzenler. Kamuoyunun bilgilendirilmesi ve ifade özgürlüğünün korunması bu bölümün temel amacıdır.
+    </p>
+</section>
 
     <!-- Madde 28 -->
     <details id="madde-28" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
